--- a/naver_main.html
+++ b/naver_main.html
@@ -12,24 +12,32 @@
                 <div style="display: flex; flex-direction: row; justify-content: space-between">
                     <div id="left_element">
                         <div class="element" id="shortcuts">
-                            <img
-                                src="https://github.com/717276/Naver_Front/raw/main/img/header/%EB%8D%94%EB%B3%B4%EA%B8%B0.png"
-                                alt=""
-                            />
+                            <a href="#">
+                                <img
+                                    src="https://github.com/717276/Naver_Front/raw/main/img/header/%EB%8D%94%EB%B3%B4%EA%B8%B0.png"
+                                    alt=""
+                                />
+                            </a>
                         </div>
                         <div class="element" id="naver_pay">
-                            <img src="https://github.com/717276/Naver_Front/raw/main/img/header/pay.png" alt="" />
+                            <a href="#">
+                                <img src="https://github.com/717276/Naver_Front/raw/main/img/header/pay.png" alt="" />
+                            </a>
                         </div>
                     </div>
                     <div id="right_element">
                         <div class="element" id="naver_talk">
-                            <img
-                                src="https://github.com/717276/Naver_Front/raw/main/img/header/naver_talk.png"
-                                alt=""
-                            />
+                            <a href="#">
+                                <img
+                                    src="https://github.com/717276/Naver_Front/raw/main/img/header/naver_talk.png"
+                                    alt=""
+                                />
+                            </a>
                         </div>
                         <div class="element" id="alarm" style="margin-top: 5px">
-                            <img src="https://github.com/717276/Naver_Front/raw/main/img/header/alarm.png" alt="" />
+                            <a href="#">
+                                <img src="https://github.com/717276/Naver_Front/raw/main/img/header/alarm.png" alt="" />
+                            </a>
                         </div>
                     </div>
                 </div>
