update widget and clip part_0419

--- a/naver_main.html
+++ b/naver_main.html
@@ -592,7 +592,15 @@
                             </table>
                         </div>
                     </div>
-                    <div class="clip">clip</div>
+                    <hr>
+                    <div class="clip">
+                        <span>매일 찾는 짧은 즐거움</span>
+                        <img src="./img/clipImg.PNG" width="100%">
+                        <details>
+                            <summary>펼쳐보기</summary>
+                            <img src="./img/clipImg.PNG" width="100%">
+                        </details>
+                    </div>
                 </div>
             </div>
             <div class="aside">
@@ -716,47 +724,42 @@
                         <br />
                         <div class="widget_dictionary">
                             <div class="widget_papago">
-                                <img src="./papago.PNG" style="width: 100px" />
+                                <img src="./img/papago.PNG" style="width: 100px" />
                             </div>
                             <div class="widget_papago">
                                 <p>
-                                    <span style="font-weight: bold"
-                                        >영어사전<br />
-                                        Get out of your comfort zone</span
-                                    >
+                                    <span style="font-weight: bold">영어사전<br />
+                                    Get out of your comfort zone</span>
                                 </p>
                             </div>
                         </div>
                         <br />
                         <div class="widget_vibe">
-                            <span style="font-weight: bold; font-size: 16px"
-                                ><i class="fa-solid fa-signal"></i> VIBE 행복에너지UP!</span
-                            >&nbsp;&nbsp;&nbsp;<span style="color: gray; font-size: 13px"
-                                >다른 추천 보기<i class="fa-solid fa-rotate-right"></i></span
-                            ><br /><br />
+                            <span style="font-weight: bold; font-size: 16px"><i class="fa-solid fa-signal"></i> VIBE 행복에너지UP!</span>
+                            &nbsp;&nbsp;&nbsp;<span style="color: gray; font-size: 13px">다른 추천 보기<i class="fa-solid fa-rotate-right"></i></span><br /><br />
                             <div class="vibe_img">
                                 <div class="img1">
                                     <img
-                                        src="https://images.unsplash.com/photo-1713195959107-54c1db587872?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzNHx8fGVufDB8fHx8fA%3D%3D"
-                                        style="width: 80px; height: 130px"
-                                    />
+                                        src="https://images.unsplash.com/photo-1713195959107-54c1db587872?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzNHx8fGVufDB8fHx8fA%3D%3D" style="width: 80px; height: 130px"/>
                                     <span>여행의 시작과 끝이 공존하는...</span>
                                 </div>
                                 <div class="img2">
                                     <img
-                                        src="https://images.unsplash.com/photo-1712841607084-3c8dabe07818?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5Mnx8fGVufDB8fHx8fA%3D%3D"
-                                        style="width: 80px; height: 130px"
-                                    />
-                                    <span>여행의 시작과 끝이 공존하는...</span>
+                                        src="https://images.unsplash.com/photo-1712841607084-3c8dabe07818?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5Mnx8fGVufDB8fHx8fA%3D%3D" style="width: 80px; height: 130px"/>
+                                    <span>주말 시장에서 작은 마주침들</span>
                                 </div>
                                 <div class="img3">
                                     <img
-                                        src="https://plus.unsplash.com/premium_photo-1683318596886-3ba591e65918?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDd8fHxlbnwwfHx8fHw%3D"
-                                        style="width: 80px; height: 130px"
-                                    />
-                                    <span>여행의 시작과 끝이 공존하는...</span>
+                                        src="https://plus.unsplash.com/premium_photo-1683318596886-3ba591e65918?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDd8fHxlbnwwfHx8fHw%3D" style="width: 80px; height: 130px"/>
+                                    <span>눈과 마음이 편해지는 청량한...</span>
                                 </div>
-                            </div>
+                            </div>   
+                        </div>
+                        <br>
+                        <div class="widget_ad">
+                            <img class="side_whaleimg" src="./source/whale broswer.png">
+                            나만의 스마트한 브라우저, 웨일
+                            인터넷을 여는 가장 스마트한 방법
                         </div>
                     </div>
                 </div>
