feat:create join.html

--- a/naver_login.html
+++ b/naver_login.html
@@ -8,24 +8,28 @@
 </head>
 <link rel="stylesheet" href="naver_login.css">
 <body>
-    <header><h1 id="title" style="color:green; font-weight: bold;">NAVER</h1></header>
-    <div class="container">
-        <div class="content">
-            <ul class="login_menu">
-                <li><a href="#">ID로그인</a></li>
-                <li><a href="#">1회용 번호</a></li>
-                <li><a href="#">QR 코드</a></li>
-            </ul>            
-            <form class="login_form" action="#" method="get">
-                <input name="id" id="id" size="20" maxlength="20" placeholder="아이디" type="text" value=""><br>
-                <input name="password" id="password" size="20" maxlength="20" placeholder="비밀번호" type="password" value="">
-        
-                <input name="radio" id="radio" type="radio"><label for="radio">로그인 상태 유지</label>
-                <button id="submit_btn" type="submit"
-                    style="color:white; border-radius: 10px; background-color: green;">로그인</button>
-            </form>
+    <header><h1 id="title" style="color:green; font-weight:bolder;">NAVER</h1></header>
+    <div class="box">
+        <div class="container">
+            <div class="login_menu_wrap">
+                <ul class="login_menu">
+                    <li><a href="#">ID로그인</a></li>
+                    <li><a href="#">1회용 번호</a></li>
+                    <li><a href="#">QR 코드</a></li>
+                </ul>
+            </div>
+            <div class="content">
+                <form class="login_form" action="#" method="get">
+                    <input name="id" id="id" size="40" maxlength="40" placeholder="아이디" type="text" value=""><br>
+                    <input name="password" id="password" size="40" maxlength="40" placeholder="비밀번호" type="password" value="">
+            
+                    <label for="radio" style="padding-bottom:20px;"><input name="checkbox" id="checkbox" type="checkbox" style="display:inline-block">로그인 상태 유지</label>
+                    <button id="submit_btn" type="submit"
+                        style="font-size:30px; color:white; border-radius: 10px; background-color: green;">로그인</button>
+                </form>
+            </div>
             <div class="find_info">
-                <ul>
+                <ul class="find_menu">
                     <li><a href="#">비밀번호 찾기</a></li>
                     <li><a href="#">아이디 찾기</a></li>
                     <li><a href="#">회원가입</a></li>
@@ -34,5 +38,4 @@
         </div>
     </div>
 </body>
-
 </html>
