--- a/naver_main.html
+++ b/naver_main.html
@@ -608,11 +608,13 @@
                     <div class="login">
                         <p id="login_comment">네이버를 더 안전하고 편리하게 이용하세요</p>
                         <div id="login_banner">
-                            <img
-                                id="login_banner_img"
-                                src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_banner.png"
-                                alt="login_banner.png"
-                            />
+                            <a href="naver_login.html">
+                                <img
+                                    id="login_banner_img"
+                                    src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_banner.png"
+                                    alt="login_banner.png"
+                                />
+                            </a>
                         </div>
                         <div class="login_main">
                             <a id="find_id" href="">아이디 찾기</a>
