--- a/naver_main.html
+++ b/naver_main.html
@@ -203,12 +203,38 @@
                                     <div><i class="fa-solid fa-cart-plus"></i><span>장바구니</span></div>
                                 </div>
                                 <div class="sl-third">
-                                    <img src="./hb-img/minted.PNG" alt="광고" />
+                                    <img src="./hb-img/minted2.PNG" alt="광고" /><br>
                                 </div>
+                                <span style="font-size: 12px;">입 안이 촉촉해져서 98.9% 구취박멸</span>
                             </div>
                             <div class="sc-right">
-                                <div>
-                                    <img src="./hb-img/all.PNG" alt="all" />
+                                <div class="scr-top">
+                                    <ul>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                    </ul>
+                                </div>
+                                <div class="scr-bottom">
+                                    <ul class="down">
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                        <li><img src="./hb-img/sho.PNG" alt="쇼핑리스트"><br>
+                                            <span>예쁜 주방에는 <br>꼭 이게 있더라</span></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -639,11 +665,11 @@
                     </div>
                     <div class="weather">
                         <div class="w-top">
-                            <div>
-                                <span><b>날씨</b>&nbsp;&nbsp;</span
+                            <div class="wt-left">
+                                <span><b>날씨</b>&nbsp;</span
                                 ><span class="w-icon"><i class="fa-solid fa-microphone"></i>&nbsp;예보 비교</span>
                             </div>
-                            <div style="font-size: 13px">서울시 역삼동</div>
+                            <div class="wt-right" style="font-size: 13px">서울시 역삼동</div>
                         </div>
                         <div><hr /></div>
                         <div class="w-bottom">
@@ -652,7 +678,7 @@
                     </div>
                     <div class="stock">
                         <div class="st-top">
-                            <div>증시&nbsp;<i class="fa-solid fa-circle-exclamation" style="font-size: 11px"></i></div>
+                            <div><b>증시</b>&nbsp;<i class="fa-solid fa-circle-exclamation" style="font-size: 11px"></i></div>
                             <div class="stt-right">
                                 <span class="font-gray" style="font-size: 13px">04.18. 14:42&nbsp;</span>
                                 <i class="fa-solid fa-rotate-right"></i>
