[update] icons update

--- a/naver_main.html
+++ b/naver_main.html
@@ -65,7 +65,19 @@
                     <button id="submit_btn" type="submit" style="display: none">검색</button>
                 </form>
             </div>
-            <div class="icons">icons</div>
+            <div class="icons">
+                <div><i class="fa-solid fa-envelope-open-text"></i><span>메일</span></div>
+                <div><i class="fa-solid fa-mug-saucer"></i><span>카페</span></div>
+                <div><i class="fa-solid fa-message"></i><span>블로그</span></div>
+                <div><i class="fa-solid fa-bag-shopping"></i><span>쇼핑</span></div>
+                <div><i class="fa-solid fa-newspaper"></i><span>뉴스</span></div>
+                <div><i class="fa-solid fa-chart-line"></i><span>증권</span></div>
+                <div><i class="fa-solid fa-house"></i><span>부동산</span></div>
+                <div><i class="fa-solid fa-map-location-dot"></i><span>지도</span></div>
+                <div><i class="fa-solid fa-book-open"></i><span>웹툰</span></div>
+                <div><i class="fa-solid fa-bolt-lightning"></i><span>치지직</span></div>
+                <div><i class="fa-solid fa-ellipsis"></i></div>
+            </div>
         </div>
         <div class="advertisement">
             <img
