feat: save join

--- a/naver_main.html
+++ b/naver_main.html
@@ -659,6 +659,7 @@
                                     id="login_banner_img"
                                     src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_banner.png"
                                     alt="login_banner.png"
+                                    style="width:100%;"
                                 />
                             </a>
                         </div>
